# Discord_Rust_Lib

./: .env  .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/core/: bot.rs  handler.rs  json.rs  mod.rs
src/core/data/: channel.rs  errors.rs  guild.rs  message.rs  mod.rs  user.rs  wss_messages.rs
src/core/http/: mod.rs
src/core/requests/: http_get.rs  mod.rs
src/core/wss/: mod.rs
