[package]
name = "DiscordHM_API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["json", "multipart"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
dotenv = "0.15.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
serde_repr = "0.1.16"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
async-trait = "0.1.74"
bytes = "1.5.0"
